<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GleitZeit Rechner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_kalenderlist">Kalenderlist Activity</string>
    <string name="title_activity_rechner">RechnerActivity</string>

    <!-- Eigene Strings -->
    <string name="start_button">Start</string>
    <string name="end_button">Ende</string>
    <string name="calculate">rechnen</string>

    <!-- Rechner Activity -->
    <string name="startTime">Beginn der Arbeit :</string>
    <string name="endTime">Feierabend :</string>
    <string name="breakTime">Mittag :</string>
    <string name="totalWorkingTime">Gesamtarbeitszeit :</string>
    <string name="bspTs">0730</string>
    <string name="bspTe">1700</string>
    <string name="bspTb">0045</string>
    <string name="title_activity_time_list">TimeListActivity</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>

    <!-- TimeLine Activity -->
    <string name="wochenZeitS">Wochenarbeitszeit = </string>
    <string name="weekTimeS"></string>
    <string name="title_activity_time_line_activity_v2">TimeLineActivityV2</string>

</resources>
