<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RechnerActivity" >

    <EditText
        android:id="@+id/breakTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startTime"
        android:layout_below="@+id/startTime"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:gravity="center_vertical|right"
        android:hint="@string/bspTb"
        android:inputType="time" />

    <EditText
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="center_vertical|right"
        android:hint="@string/bspTs"
        android:inputType="time" />

    <EditText
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/breakTime"
        android:layout_below="@+id/breakTime"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:gravity="center_vertical|right"
        android:hint="@string/bspTe"
        android:inputType="time" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/endTime"
        android:layout_alignBottom="@+id/endTime"
        android:layout_alignLeft="@+id/textBreakTime"
        android:text="@string/endTime" />

    <TextView
        android:id="@+id/textBreakTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/breakTime"
        android:layout_alignBottom="@+id/breakTime"
        android:layout_alignLeft="@+id/textStartTime"
        android:text="@string/breakTime" />

    <TextView
        android:id="@+id/textStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startTime"
        android:layout_alignBottom="@+id/startTime"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/startTime"
        android:text="@string/startTime" />

    <TextView
        android:id="@+id/textTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCalc"
        android:layout_alignBottom="@+id/buttonCalc"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/buttonCalc"
        android:hint="@string/totalWorkingTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="68dp"
     />

</RelativeLayout>
